--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/Modificar.cshtml
@@ -343,7 +343,7 @@
                     <div class="col-md-12">
                         <div class="col-md-12">
                             <div class="form-group">
-                                @Html.Action("GridViewPartial_DiarioCble_det")
+                                @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
                             </div>
                         </div>
                     </div>
@@ -378,7 +378,7 @@
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
                     console.log(data);
-                    GridViewPartial_DiarioCble_det.PerformCallback();
+                    GridView_comprobante_detalle.PerformCallback();
                 },
                 error: function (error) {
                 }
