--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/_GridViewPartial_ConciliacionAnticipoProveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/_GridViewPartial_ConciliacionAnticipoProveedor.cshtml
@@ -101,6 +101,14 @@
 
             });
         });
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXP_005", "CuentasPorPagarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdConciliacion = DataBinder.Eval(c.DataItem, "IdConciliacion").ToString() }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = Unit.Percentage(5);
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
