--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal_det.cshtml
@@ -20,6 +20,7 @@
         settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
+        settings.CommandColumn.VisibleIndex = 0;
 
         settings.SettingsContextMenu.Enabled = true;
         settings.CommandColumn.ShowNewButtonInHeader = true;
@@ -41,6 +42,7 @@
         settings.InitNewRow = (s, e) =>
         {
             e.NewValues["IdProducto"] = "";
+            e.NewValues["IdCentroCosto"] = "";
             e.NewValues["IdUnidadMedida"] = "UNID";
             e.NewValues["IdCod_Impuesto"] = "";
             e.NewValues["do_Cantidad"] = "1";
@@ -48,17 +50,9 @@
         };
         settings.Columns.Add(column =>
         {
-            column.Caption = "*";
-            column.FieldName = "Secuencia";
-            column.Width = Unit.Percentage(5);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-            column.UnboundType = DevExpress.Data.UnboundColumnType.String;
-
-        });
-        settings.Columns.Add(column =>
-        {
             column.FieldName = "pr_descripcion";
             column.Caption = "Producto";
+            column.VisibleIndex = 1;
             column.Width = Unit.Percentage(20);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -69,6 +63,7 @@
             column.Caption = "Producto";
             column.Width = Unit.Percentage(20);
             column.Visible = false;
+            column.VisibleIndex = 1;
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
             {
@@ -80,7 +75,8 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdUnidadMedida";
-            column.Caption = "U. de medida";
+            column.Caption = "Unidad";
+            column.VisibleIndex = 2;
             column.Width = Unit.Percentage(8);
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.EditorProperties().ComboBox(p =>
@@ -95,7 +91,8 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "do_Cantidad";
-            column.Caption = "cantidad";
+            column.Caption = "Cantidad";
+            column.VisibleIndex = 3;
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(8);
             column.EditorProperties().SpinEdit(q =>
@@ -108,6 +105,7 @@
         {
             column.FieldName = "do_precioCompra";
             column.Caption = "Precio";
+            column.VisibleIndex = 4;
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(8);
             column.EditorProperties().SpinEdit(q =>
@@ -122,6 +120,7 @@
             column.FieldName = "do_porc_des";
             column.Caption = "% Desc. uni.";
             column.Width = Unit.Percentage(8);
+            column.VisibleIndex = 5;
             column.EditorProperties().SpinEdit(q =>
             {
                 q.MinValue = 0;
@@ -133,7 +132,8 @@
         {
             column.FieldName = "IdCod_Impuesto";
             column.Caption = "Impuesto";
-            column.Width = Unit.Percentage(10);
+            column.VisibleIndex = 6;
+            column.Width = Unit.Percentage(5);
             column.Visible = false;
             column.EditorProperties().ComboBox(p =>
             {
@@ -146,15 +146,6 @@
 
             });
             column.EditFormSettings.Visible = DefaultBoolean.True;
-
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "do_precioFinal";
-            column.Caption = "Precio final";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(8);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
 
         });
         settings.Columns.Add(column =>
@@ -181,6 +172,46 @@
             column.Width = Unit.Percentage(8);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdCentroCosto";
+            column.Caption = "Centro de costo";
+            column.Width = Unit.Percentage(10);
+            column.Visible = false;
+            column.VisibleIndex = 7;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
+            {
+                Html.RenderPartial("_CmbCentroCosto_Compras", DataBinder.Eval(c.DataItem, "IdCentroCosto"));
+            });
+        });
+        
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "cc_Descripcion";
+            column.Caption = "Centro de costo";
+            column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
+        /*
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "nom_punto_cargo_grupo";
+            column.Caption = "Grupo";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "nom_punto_cargo";
+            column.Caption = "Cargo";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        */
+
         settings.SettingsBehavior.AllowSort = false;
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
         settings.ClientSideEvents.EndCallback = "function(s,e){if (s.IsEditing()) {var editor = IdProducto;editor.Focus();}}";
